[gd_scene load_steps=5 format=3 uid="uid://bfelop77v2h8y"]

[ext_resource type="Script" uid="uid://dvunpsbqqgqh8" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="AudioStream" uid="uid://dwpm3neaongw7" path="res://assets/audio/sfx/button_click.wav" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://bj5e3taue1p76" path="res://assets/textures/button_texture/startGame_button.png" id="2_wu84c"]
[ext_resource type="Texture2D" uid="uid://bln5inn05t14v" path="res://assets/textures/button_texture/exitGame_button.png" id="3_8ln24"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -86.0
offset_right = 55.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
text = "CookieMookie"

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -33.0
offset_right = 46.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = " "
icon = ExtResource("2_wu84c")
flat = true
icon_alignment = 1
expand_icon = true

[node name="QuitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 4
text = " "
icon = ExtResource("3_8ln24")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ekxnf")
volume_db = 12.0
